[package]
name = "cryptography"
version = "0.1.0"
authors = [ "Jesse Lancaster <jesse@polymath.network>",
            "Parnian Alimi   <parnian@polymath.network>",
            "Arash Afshar    <arash@polymath.network>",
          ]
readme = "README.md"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "The Repository for cryptographic libraries used in Polymesh"
edition = "2018"
exclude = [".gitignore"]
build = "build.rs"

[dependencies]
sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }

# Common
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"] }
byteorder = { version = "1.3.4", default-features = false }
failure = { version = "0.1.7"}

# Crypto
sha3 = { version = "0.8", default-features = false }
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }
rand_core = { version = "0.5", default-features = false, features = ["alloc"] }
zeroize = { version = "1.1", default-features = false }
# Use avx2_backend for avx2 optimizations.
curve25519-dalek = { version = "2.0.0", features = ["u64_backend", "alloc", "serde"], default-features = false }
schnorrkel = { version = "0.9.1", features = ["u64_backend", "wasm-bindgen"], default-features = false }
bulletproofs = { version = "2.0.0", features = ["std"], default-features = false }
merlin = { version = "2.0.0", default-features = false }

[build-dependencies]
# WASM builder is using `WasmBuilderSource::Crates("1.0.8")`, please see `build.rs`.
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate", default-features = false, rev = "93569d0d1af7aa5eb67b9de8b58d7fffde63b421" }

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
criterion = "0.3"

[features]
default = ["std"]
no_std = [ ]
std = [
	"sp-std/std",
]

[[bench]]
name = "elgamal_decryption"
harness = false
