[package]
name = "scv"
version = "0.1.0"
authors = [ "Jesse Lancaster <jesse@polymath.network>",
            "Parnian Alimi   <parnian@polymath.network>",
          ]
readme = "README.md"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "Simple Claim Verifier"
edition = "2018"
exclude = [".gitignore"]

[dependencies]
cli_common = { package = "cli-common", path = "../common/" }
cryptography = { package = "cryptography", path = "../../cryptography/" }

serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

curve25519-dalek = { version = "2.0.0", features = ["u64_backend", "alloc", "serde"], default-features = false }
schnorrkel = { version = "0.9.1", features = ["u64_backend", "wasm-bindgen"], default-features = false }

# Only binaries
structopt = { version = "0.3", default-features = false }
exitcode = { version = "1.1.2", default-features = false }
