[package]
name = "confidential-identity-v1-wasm"
version = "1.0.0"
authors = ["Polymath Inc"]
description = "The wasm library for confidential identity."
repository = "https://github.com/PolymathNetwork/cryptography"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
confidential_identity_v1 = { path = ".." }
rand = { version = "0.8", features = ["getrandom", "alloc"], default-features = false }
rand_core = { version = "0.6", default-features = false}
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", default-features = false, features = ["nightly", "alloc"] }
blake2 = { version = "0.10.2", default-features = false }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"]}
hex = { version = "0.4.2", default-features = false }
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
