[package]
name = "confidential-identity-wasm"
version = "1.0.0"
authors = ["Polymath Inc"]
description = "The wasm library for confidential identity."
repository = "https://github.com/PolymathNetwork/cryptography"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
confidential_identity = { path = ".." }
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }
rand_core = { version = "0.5", default-features = false}
curve25519-dalek = { git = "https://github.com/PolymathNetwork/curve25519-dalek.git", branch = "v2-packed-simd", default-features = false, features = ["nightly", "u64_backend"] }
blake2 = { version = "0.9.0", default-features = false }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"]}
wasm-bindgen = "0.2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
