[package]
name = "mercat-wasm"
version = "0.1.0"
authors = ["Polymath Inc"]
description = "The wasm library for MERCAT."
repository = "https://github.com/PolymathNetwork/cryptography"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
mercat = { path = ".." }
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }
rand_core = { version = "0.5", default-features = false}
serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
hex = { version = "0.4.2" }
base64 = { version = "0.12.1" }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"]}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
