[package]
name = "private-identity-audit-ffi"
version = "1.0.0"
authors = [ "Polymath Inc" ]
readme = "README.md"
edition = "2018"
description = "FFI bindings for the private identity audit crate"

[lib]
name = "private_identity_audit_ffi"
crate-type = ["cdylib"]

[features]
default = ["cbindgen", "std"]
no_std = []
std = [
    # "serde_all",
    "cryptography_core/std",
    # "confidential_identity/std",
    "rand_core/std",
    "rand/std",
    # "failure/std",
    "uuid/std",
]

[dependencies.private_identity_audit]
path = ".."

[dependencies.confidential_identity]
path = "../../confidential-identity"

[dependencies]
libc = "^0.2"
cryptography_core = { path = "../../cryptography-core/", default_features = false }
# curve25519-dalek = { git = "https://github.com/PolymathNetwork/curve25519-dalek.git", branch = "v2-packed-simd", default-features = false, features = ["nightly", "u64_backend"] }
rand_core = { version = "0.5", default-features = false }
rand = { version = "0.7", default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4"], optional = true }

[build-dependencies]
cbindgen = { version = "^0.13", optional = true }

[package.metadata.docs.rs]
no-default-features = true

