[package]
name = "private-identity-audit-wasm"
version = "1.0.0"
authors = ["Polymath Inc"]
description = "The wasm library for private identity audit library."
repository = "https://github.com/PolymathNetwork/cryptography"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
private_identity_audit = { path = ".." }
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }
rand_core = { version = "0.5", default-features = false }
uuid = { version = "0.8.1", features = ["serde", "v4"] }

serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4.2", default-features = false }
base64 = { version = "0.13.0" }
codec = { package = "parity-scale-codec", version = "1.3.6", default-features = false, features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }

[dependencies.confidential_identity]
path = "../../confidential-identity"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
