[package]
name = "scp"
version = "0.1.0"
authors = [ "Polymath Inc" ]
repository = "https://github.com/PolymathNetwork/cryptography"
description = "Asset Granularity Unique Identity: Simple Claim Prover"
edition = "2018"

[dependencies]
cli_common = { package = "cli-common", path = "../common/" }
cryptography = { path = "../../cryptography/" }

serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Crypto
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }

# Only binaries
structopt = { version = "0.3", default-features = false }
exitcode = { version = "1.1.2", default-features = false }
