[package]
name = "mercat-account"
version = "0.1.0"
authors = [ "Jesse Lancaster <jesse@polymath.network>",
            "Arash Afshar    <arash@polymath.network>",
            "Parnian Alimi   <parnian@polymath.network>",
          ]
edition = "2018"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "MERCAT account CLI"

[dependencies]
cryptography = { package = "cryptography", path = "../../../cryptography/" }
mercat_common = { package = "mercat-common", path = "../common/" }

serde = "1.0.105"
serde_json = "1.0"
serde_bytes = "0.11"
log = "0.4.8"
env_logger = "0.7.1"
confy = "0.4.0"
structopt = "0.3"
metrics = "0.12.1"
metrics-core = "0.5.2"
base64 = "0.12.1"
failure = "0.1.7"
rand_core = "0.5"

# Crypto
rand = "0.7.3"
curve25519-dalek = "2.0.0"
schnorrkel = "0.9.1"
