[package]
name = "mercat-account"
version = "0.1.0"
authors = [ "Polymath Inc" ]
edition = "2018"
repository = "https://github.com/PolymathNetwork/cryptography"
description = "MERCAT account CLI."

[dependencies]
cryptography = { package = "cryptography", path = "../../../cryptography/" }
mercat_common = { package = "mercat-common", path = "../common/" }

serde = { version = "1.0.105", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde_bytes = { version = "0.11", default-features = false, features = ["alloc"]}
log = { version = "0.4.8"}
env_logger = { version = "0.7.1" }
confy = { version = "0.4.0" }
structopt = { version = "0.3", default-features = false }
metrics = { version = "0.12.1" }
metrics-core = { version = "0.5.2" }
base64 = { version = "0.12.1" }
failure = { version = "0.1.7" }

# Crypto
rand = { version = "0.7.3", features = ["wasm-bindgen", "getrandom", "alloc"], default-features = false }
curve25519-dalek = { version = "2.0.0", features = ["u64_backend", "alloc", "serde"], default-features = false }
schnorrkel = { version = "0.9.1", default-features = false }
